added image and article

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conceptual Session</title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-    
+    <div class="hero">
+        <h1> BENGAL TIGER </h1>
+    </div>
+    <div class="article">
+        <h2> The Royal Bengal Tiger</h2>
+        <p> The Royal Bengal Tiger is the national animal of Bangladesh. It is found in the Sundarbans, which is located in the south side of Bangladesh.The Royal Bengal Tiger is the national animal of Bangladesh. It is found in the Sundarbans, which is located in the south side of Bangladesh.The Royal Bengal Tiger is the national animal of Bangladesh. It is found in the Sundarbans, which is located in the south side of Bangladesh.The Royal Bengal Tiger is the national animal of Bangladesh. It is found in the Sundarbans, which is located in the south side of Bangladesh.</p>
+    </div>
 </body>
 </html>
