added types of tiger section

--- a/index.html
+++ b/index.html
@@ -15,5 +15,29 @@
         <h2> The Royal Bengal Tiger</h2>
         <p> The Royal Bengal Tiger is the national animal of Bangladesh. It is found in the Sundarbans, which is located in the south side of Bangladesh.The Royal Bengal Tiger is the national animal of Bangladesh. It is found in the Sundarbans, which is located in the south side of Bangladesh.The Royal Bengal Tiger is the national animal of Bangladesh. It is found in the Sundarbans, which is located in the south side of Bangladesh.The Royal Bengal Tiger is the national animal of Bangladesh. It is found in the Sundarbans, which is located in the south side of Bangladesh.</p>
     </div>
+    <div id="tiger-types">
+        <h3>Types of Tiger</h3>
+        <div>
+            <img src=" https://img.freepik.com/free-photo/tiger-looking-with-open-mouth_1150-18083.jpg?w=360&t=st=1704437322~exp=1704437922~hmac=bac20ad74f1332c8e220f4fa1a6d9c48bd8b01bcf7b6171d699467cf3b2066e5" alt="">
+
+        </div>
+        <div>
+            <img src="https://img.freepik.com/free-photo/animal-wild-nature-undomesticated-cat-close-up-portrait-generative-ai_188544-8150.jpg?w=740&t=st=1704437386~exp=1704437986~hmac=245dbf4537b245fe4b6eaccdc0ba28523495511af3de26147ba08c7d34ed1b48 " alt="">
+
+        </div>
+        <div>
+            <img src="https://img.freepik.com/free-photo/ferocious-tiger-nature_23-2150767580.jpg?t=st=1704437595~exp=1704441195~hmac=0ae5dbfd298ea7f2d84443a01eea59f599c5d3e35da53a47de61778ac5c580f3&w=360" alt="">
+
+        </div>
+
+
+    </div>
+
+
+
+
+
+
+    
 </body>
 </html>
